[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hksa-face-blend"
version = "1.0.0"
description = "Face morphing using MediaPipe landmark detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "mediapipe>=0.10.0",
    "Pillow>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/USERNAME/HKSAFaceBlend"
Repository = "https://github.com/USERNAME/HKSAFaceBlend"
